external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_0.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/suggestions/suggestion_0.move:3:25
  │
3 │     public fun call() { gool() }
  │                         ^^^^ Unbound function 'gool' in current scope
